name:                Example
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple
author:              PLR

executable Main
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
                       base >=4.7 && <4.8,
                       GPipe-Core >=0.1 && <0.2,
                       GPipe-GLFW >=0.1 && <0.2
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
