name:                GPipe-GLFW
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple
author:              PLR

library
  hs-source-dirs:      src
  build-depends:
                       base >=4.7 && <4.9,
                       transformers >= 0.3 && < 0.5,
                       GLFW-b >=1.4 && <1.5,
                       GPipe >=2.0 && <2.1
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
  exposed-modules:     Graphics.GPipe.Context.GLFW
  other-modules:
                       Graphics.GPipe.Context.GLFW.Resource
                       Graphics.GPipe.Context.GLFW.Util
                       Graphics.GPipe.Context.GLFW.Format
