name:           Smoketests
version:        0.0.1
cabal-version:  >=1.10
build-type:     Simple
author:         Patrick Redmond
license:        MIT
copyright:      Patrick Redmond
category:       Graphics
stability:      Experimental
homepage:       https://github.com/plredmond/GPipe-GLFW
synopsis:       Smoke tests of the GPipe-GLFW library for GPipe
maintainer:     Patrick Redmond

executable fixed
  main-is:             Fixed.hs
  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
  hs-source-dirs:      src
  other-modules:       Test.Common, Test.Control
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable timed
  main-is:             Timed.hs
  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
  hs-source-dirs:      src
  other-modules:       Test.Common, Test.Control
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable input
  main-is:             Input.hs
  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
  hs-source-dirs:      src
  other-modules:       Test.Common, Test.Control
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable manual
  main-is:             Manual.hs
  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
  hs-source-dirs:      src
  other-modules:       Test.Common, Test.Control
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable close
  main-is:             Close.hs
  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
  hs-source-dirs:      src
  other-modules:       Test.Common, Test.Control
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable sequence
  main-is:             Sequence.hs
  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
  hs-source-dirs:      src
  other-modules:       Test.Common, Test.Control
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

--executable split
--  main-is:             Split.hs
--  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
--  hs-source-dirs:      src
--  other-modules:       Test.Common
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010
--
--executable multi
--  main-is:             Multi.hs
--  build-depends:       base, GPipe, GPipe-GLFW, transformers, exception-transformers
--  hs-source-dirs:      src
--  other-modules:       Test.Common
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010
